--- a/public/chat.html
+++ b/public/chat.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>Chat</h1>
-    <div id="message"></div>
+    <div id="message">Test</div>
+
+    <form method="GET" id="search_form">
+        <input id="search" name="search" type="text" autocomplete="off" required>
+        <button type="submit">Search</button>
+    </form>
+    <ul id="user"></ul>
 </body>
 </html>
