--- a/public/register.html
+++ b/public/register.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Register</h1>
-    <form id="register-form">
+    <form id="register-form" method="post">
         <input id="username" name="username" type="text" autocomplete="off" placeholder="Username" required>
         <input id="password" name="password" type="password" autocomplete="off" placeholder="Password" required>
         <button type="submit">Register</button>
