--- a/public/user.html
+++ b/public/user.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User</title>
+    <style>
+        ul {
+            list-style-type: none;
+        }
+    </style>
     <script defer src="http://localhost:5000/socket.io/socket.io.js"></script> 
     <script defer src="http://localhost:5000/scripts/user.js"></script>
 </head>
