--- a/public/user.html
+++ b/public/user.html
@@ -19,5 +19,6 @@
         <input id="input" type="text" autocomplete="off"> 
         <button type="submit">Send</button>
     </form>
+    <button id="delete">Delete History</button>
 </body>
 </html>
