--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
     <button id="logout">Logout</button>
     <h1>Chat</h1> 
     <div id="message"></div>
-    <form method="GET" id="search_form">
+    <form method="POST" id="search_form">
         <input id="search" name="search" type="text" autocomplete="off" required>
         <button type="submit">Search</button>
     </form>
