--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script defer src="scripts/login.js"></script>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="css/register.css">
 </head>
 <body>
-    <h1>Login</h1>
-    <form method="POST" id="login-form">
-        <input id="username" name="username" type="text" autocomplete="off" placeholder="Username" required>
-        <input id="password" name="password" type="password" autocomplete="off" placeholder="Password" required>
-        <button type="submit">Login</button>
-    </form>
-    <div id="message"></div>
-    <a href="/register.html">Register</a>
+<div class="box">
+    <!-- <div class="content rounded-3"> -->
+    <div>
+        <h1>Login</h1>
+        <form method="POST" id="login-form">
+            <input id="username" name="username" type="text" autocomplete="off" placeholder="Username" required>
+            <input id="password" name="password" type="password" autocomplete="off" placeholder="Password" required> <br>
+            <button type="submit">Login</button>
+        </form>
+        <div id="message" class="message"></div>
+        <p>You don't have an account <br> please register!</p>
+        <a href="./register.html" class="link">Register</a>
+    </div>
+</div>
 </body>
 </html>
