--- a/public/userRoom.html
+++ b/public/userRoom.html
@@ -4,21 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport content="> 
     <title>User</title>
     <style>
         ul {
             list-style-type: none;
         }
+
+        body { background-color: #060c21 !important; margin: 0; padding-bottom: 3rem;  }
+  
+        #chatForm { background: rgba(0, 0, 0, 0.15) ; padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
+        #input { border-color: #00b4d8; background-color: #060c21; color: white; padding: 20px; flex-grow: 1; border-radius: 2rem; margin-bottom: 50px; }
+        #input:focus { outline: none; }
+        #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
+  
+        #messages { list-style-type: none; margin: 0; padding: 0; }
+        #messages > li { padding: 0.5rem 1rem; overflow-y: auto; color:#00b4d8; }
+        #messages > li:nth-child(odd) { background: #060c21; }
+        #delete {border: none; flex-grow: 0.00; border-radius: 1rem; margin: 0.25rem;}
+        .send {
+            background-color: #060c21;
+            color: #00b4d8;
+            border-color: #00b4d8;
+            border-radius: 15px; }
+
+            #errorDiv {
+                color:#00b4d8;
+                font-size: large;
+            }
     </style>
+    
     <script defer src="http://localhost:5000/socket.io/socket.io.js"></script> 
     <script defer src="http://localhost:5000/scripts/userRoom.js"></script>
+    
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" data-auto-replace-svg="nest"></script>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" href="css/Chat-Page.css"> -->
 </head>
 <body>
     <ul id="messages"></ul>
     <form action="" id="chatForm">
-        <input id="input" type="text" autocomplete="off"> 
-        <button type="submit">Send</button>
+        <input id="input" type="text" autocomplete="off" placeholder="Write a message..."> 
+        <button type="submit" class="send">send</button>
+        <button id="delete">Delete History</button>
     </form>
-    <button id="delete">Delete History</button>
+   
 </body>
 </html>
